Signed-off-by: eknown <eknown@163.com> 提交其他文件

--- a/spring-security-template-web/index.html
+++ b/spring-security-template-web/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>spring-security-template-web</title>
+    <title>Nestling权限管理模板</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </html>
